# glam-traits

./: Cargo.toml  README.md
src/: lib.rs
src/impls/: assertions.rs  bool_vec.rs  float_affine.rs  float_mat.rs  float_vec.rs  int_vec.rs  mod.rs  quat.rs  rotation.rs  support.rs  valuable.rs
